--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 flake8 = "^6.1.0"
+numpy = "^1.26.2"
+termcolor = "^2.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
+mypy = "^1.7.1"
 
 [build-system]
 requires = ["poetry-core"]
