--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 flake8 = "^6.1.0"
 numpy = "^1.26.2"
 termcolor = "^2.4.0"
+tiktoken = "^0.5.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
