First step to revamp detector to use pywhispercpp
This has several benefits:
- openvino is contained in the wheel (no environment modification)
- it is a somewhat maintained library
- compilation is easier (no bazel)
- it allows us to use recent versions of stuff which is good for
  performance

Still a bit WIP

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pywhispercpp"]
 	path = pywhispercpp
-	url = git@github.com:githubnemo/whispercpp.git
+	url = git@github.com:githubnemo/pywhispercpp.git
