--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,8 @@
-[tool.poetry]
-name = "vmse2kv3"
-version = "0.1.0"
-description = ""
-authors = ["nemo <git@ningu.net>"]
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.9"
-flake8 = "^6.1.0"
-numpy = "^1.26.2"
-termcolor = "^2.4.0"
-tiktoken = "^0.5.2"
-
-[tool.poetry.group.dev.dependencies]
-black = "^23.11.0"
-mypy = "^1.7.1"
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = [
+    "setuptools>=42",
+    "flake8>=6.1.0",
+    "numpy>=1.26.2",
+    "termcolor>=2.4.0",
+]
+build-backend = "setuptools.build_meta"
