Use phonesim: vibe coded phoneme similarity function
Since we have a decent graphene->phoneme encoder with g2p we can
use a cobbled-together phoneme similarity function that is more
granular than soundex/cologne/metaphone.

Thanks to ChatGPT for throwing it together without being too cryptic.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pywhispercpp"]
 	path = pywhispercpp
 	url = git@github.com:githubnemo/pywhispercpp.git
+[submodule "ext/g2p_de"]
+	path = ext/g2p_de
+	url = git@github.com:gooofy/g2p_de.git
